--- a/src/styles/loginRegister.scss
+++ b/src/styles/loginRegister.scss
@@ -1,4 +1,14 @@
 .loginregister{
 	width:400px;
 	margin:50px auto;
+	.logo{
+			
+			text-align: center;
+			margin: 20px auto;
+	}
+	img{
+		width:30%;
+		
+	}
+	
 }
