--- a/src/styles/Register.scss
+++ b/src/styles/Register.scss
@@ -4,8 +4,13 @@
 	
 	.formItem{
 		width: 278px;
+		.item{
+			border: none;
+			width: 277px;
+			positive: relatice;
+		}
 		input{
-			display: block;
+			
 			width: 267px;
 			height: 45px;
 			padding: 0 0 0 10px;
@@ -16,22 +21,42 @@
 
 		$borderradius: 3px;
 
-		.username{
+		.username input{
 			border-radius:$borderradius $borderradius 0 0;
 			border: 1px solid gray;
 		}
-		.userpassword, .userphone{
-
+		@mixin border2{
 			border: 1px solid gray;
-			border-top: none;
+				border-top: none;
 		}
-		.verifycode{
+		.userpassword {
+			position: relative;
+			input{
+				@include border2;	
+			}
+			.passwordError{
+				color: red;
+				font-size: .8em;
+				height: 45px;
+				line-height: 45px;
+				position: absolute;
+				right: 5px;
+				top: 0;
+			}
+		} 
+		.userphone {
+			input{
+				@include border2;
+			}
+		}
+		.verifycode input{
 			border-top: none;
 			border-left: 1px solid gray;
 			border-right: 1px solid gray;
 			border-bottom: 1px solid gray;
 			border-radius: 0 0 $borderradius $borderradius;
 		}
+		
 
 	}
 
